--- a/ToolbarCustomize1/ToolbarCustomize1/ToolbarCustomize1.csproj
+++ b/ToolbarCustomize1/ToolbarCustomize1/ToolbarCustomize1.csproj
@@ -48,6 +48,9 @@
       <DependentUpon>MainMenuPageMaster.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainMenuPageMenuItem.cs" />
+    <Compile Include="ModalPage.xaml.cs">
+      <DependentUpon>ModalPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -84,6 +87,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainMenuPageDetail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ModalPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
